[tool.poetry]
name = "loop-grpc-client"
version = "0.1.0"
description = "An rpc client for LL Loop (Add/Remove liquidity from channels)"
authors = ["Kornpow <test@email.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "loopgrpc" },
]
exclude = ["loopgrpc/googleapis/*"]

[tool.poetry.scripts]
loopgrpcclient_cli = "loopgrpc.client:cli"

[tool.poetry.dependencies]
python = ">3.6"
protobuf = "^3.15.8"
aiogrpc = "^1.8"
googleapis-common-protos = "^1.53.0"
grpcio = "^1.37.0"
grpcio-tools = "^1.37.0"
protobuf3-to-dict = "^0.1.5"
